Refactorización de Cliente - Se actualizo el VO DocumentoIdentidad - Se crearon 2 excepciones adicionales para Telefono y Correo